# tank

./: .gitignore  Cargo.toml  README.md  flake.nix  inputs.nix  pins.lock.json  pins.toml
.github/workflows/: ci.yml
.tack/: default.nix  pins.lock.json  pins.toml
assets/: pins.toml
src/: cli.rs  commands.rs  fetch.rs  lock.rs  main.rs  nar.rs  pins.rs  shorturl.rs  ui.rs
