[package]
name = "tack"
version = "0.1.1"
edition = "2024"
license = "EUPL-1.2"
repository = "https://github.com/manic-systems/tack"

[[bin]]
name = "tack"
path = "src/main.rs"

[dependencies]
anyhow = "1"
flate2 = "1"
git2 = "0.20"
lexopt = "0.3"
native-tls = "0.2"
rayon = "1"
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
toml_edit = "0.22"
ureq = { version = "2", default-features = false, features = ["native-tls"] }

[profile.release]
strip = true
