[package]
name        = "tack"
version     = "0.1.1"
edition     = "2024"
license     = "EUPL-1.2"
repository  = "https://github.com/manic-systems/tack"
description = "flake-like toml nix pins, lazily fetched and transformed"
keywords    = [ "nix", "flake", "pinning", "lockfile" ]
categories  = [ "command-line-utilities", "development-tools" ]

[[bin]]
name = "tack"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
flate2     = "1"
git2       = "0.20"
lexopt     = "0.3"
native-tls = "0.2"
rayon      = "1"
serde_json = "1"
sha2       = "0.10"
tar        = "0.4"
tempfile   = "3"
toml_edit  = "0.22"
ureq       = { default-features = false, features = [ "native-tls" ], version = "2" }
xz2        = "0.1"

[profile.release]
strip = true

[lints.clippy]
cargo    = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

blanket_clippy_restriction_lints = "allow"
restriction                      = { level = "warn", priority = -1 }

arbitrary_source_item_ordering     = "allow"
arithmetic_side_effects            = "allow"
as_conversions                     = "allow"
doc_paragraphs_missing_punctuation = "allow"
else_if_without_else               = "allow"
error_impl_error                   = "allow"
exhaustive_enums                   = "allow"
exhaustive_structs                 = "allow"
expect_used                        = "allow"
implicit_return                    = "allow"
indexing_slicing                   = "allow"
inline_modules                     = "allow"
integer_division                   = "allow"
integer_division_remainder_used    = "allow"
let_underscore_must_use            = "allow"
let_underscore_untyped             = "allow"
little_endian_bytes                = "allow"
map_err_ignore                     = "allow"
missing_asserts_for_indexing       = "allow"
missing_docs_in_private_items      = "allow"
missing_errors_doc                 = "allow"
missing_inline_in_public_items     = "allow"
missing_trait_methods              = "allow"
mod_module_files                   = "allow"
module_name_repetitions            = "allow"
multiple_crate_versions            = "allow"
needless_borrowed_reference        = "allow"
print_stderr                       = "allow"
print_stdout                       = "allow"
question_mark_used                 = "allow"
ref_patterns                       = "allow"
semicolon_outside_block            = "allow"
separated_literal_suffix           = "allow"
single_call_fn                     = "allow"
single_char_lifetime_names         = "allow"
std_instead_of_alloc               = "allow"
std_instead_of_core                = "allow"
tests_outside_test_module          = "allow"
unwrap_used                        = "allow"
